warp/overlay/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: warp-stage
spec: {}
status: {}
