warp/overlay/stage/warp-stage-ingress-wsgi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-warp
spec:
  ingressClassName: nginx
  rules:
  - host: warp-stage.10.1.1.120.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: warp-demo-nginx
            port:
              number: 8080
